# $Id$

2008-04-12
	* Added patch for the following (thanks larsko):
		* New $loadgraph to show a graph of load averages,
		* add "show_graph_scale" option to turn off/on the showing of the
		current max value for the graph,
		* minor code fixes,
		* update nano and vim syntax highlighting stuff.

2008-04-10
	* Getting rid of goto usage throughout code.
	* Fix bug due to usage of gethostbyname() in threads (which is not
	reentrant) by using gethostbyname_r() when available.
	* Added patch for battery_time problem on 2.6.24 (thanks wedge).
	* Added patch to fix broken xmms2 stuff (thanks sleipner).
	* Added patch to fix SIGHUP/SIGUSR1 segfault (thanks norsetto).
	* Added patch to improve $if_up (thanks Aseem).

2008-04-02
	* Added patch to use mail_spool correctly (thanks Kapil)
	* Replacing strdup() with strndup() throughout

2008-04-01
	* Fixed segfault when configuration doesn't contain TEXT block (thanks
	Pippijn).

2008-03-31
	* Conky 1.5.1 released.
	* Added --enable-testing configure option to use insane compiler flags.

2008-03-30
	* Added mem_res and mem_vsize to $top.
	* Improved parsing of $diskio*, $disk_protect and $ioscheduler args.

2008-03-29
	* Increased C99 compliance.
	* Fixed potential segfault in get_ioscheduler().
	* Implemented upwards path traversal for fs_type.
	* Fixed bug in libmpdclient that caused file descriptors to be left open.
	* Cleaned up output of battery_* vars.

2008-03-28
	* Fixed messed up percentages (fs_free_perc, fs_used_perc, mpd_percent,
	battery_percent).

2008-03-24
	* Fixed for specifying a non-existent configuration file.
	* Added disk_protect.
	* Fixed too many open files bug in laptop_mode.
	* Fixed reading interface adresses.
	* Fixed battery_bar default size.

2008-03-23
	* Fixed compilation with --disable-x11.
	* Fixed linux.c compilation problem due to (suspected) broken linux
	headers.
	* $battery_bar sysfs fix (thanks Marcus).

2008-03-22
	* Conky 1.5.0 released.