@@ -360,9 +360,9 @@ CONFIGURATION SETTINGS
 
 
        own_window_type
-	      if own_window is yes, you may specify type  normal,  desktop  or
-	      override (default: normal).  Desktop windows are special windows
-	      that have no window decorations;	are  always  visible  on  your
+	      if own_window is yes, you may specify type normal, desktop, dock
+	      or override (default: normal).  Desktop windows are special win-
+	      dows that have no window decorations; are always visible on your
 	      desktop;	do not appear in your pager or taskbar; and are sticky
 	      across all workspaces.  Override windows are not under the  con-
 	      trol of the window manager. Hints are ignored. This type of win-
