@@ -340,7 +340,7 @@ Boolean, set pseudo-transparency?
 
 .TP 
 \fB\*(T<\fBown_window_type\fR\*(T>\fR
-if own_window is yes, you may specify type normal, desktop or override (default: normal).
+if own_window is yes, you may specify type normal, desktop, dock or override (default: normal).
 Desktop windows are special windows that have no window decorations; are always visible
 on your desktop; do not appear in your pager or taskbar; and are sticky across all workspaces.
 Override windows are not under the control of the window manager. Hints are ignored. This type
